[project]
name = "question-forge-server"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sse-starlette>=2.1",
    "litellm>=1.40",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
