[project]
name = "question-forge-server"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sse-starlette>=2.1",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[tool.uv]
package = false

[tool.ruff.lint]
# E402: sys.path manipulation before imports is intentional (Python version filter)
ignore = ["E402"]
